@@ -8,6 +8,7 @@ vim-addon-manager (0.4.2) UNRELEASED; urgency=low
   * Rename amend sub-command to enable.  Leave amend as an undocumented
     command for a little while for people that are used to the old name.
     (Closes: #501439)
+  * Remove empty directories left behind when removing addons.
 
  -- James Vega <jamessan@debian.org>  Fri, 24 Jul 2009 19:56:48 +0200
 
